src/ViewManager.h
@@ -386,6 +386,13 @@ private Q_SLOTS:
     // called when a SessionController gains focus
     void controllerChanged(SessionController *controller);
 
+    /**
+     * Disconnect this ViewManager and MainWindow from SessionController
+     * sender() and its associated view/session pair such as after a
+     * split-view has been drag-and-dropped to a new window.
+     */
+    void forgetController();
+
     /* Detaches the tab at index tabIdx */
     void detachTab(int tabIdx);
 
